feat: add PostgreSQL with SQLAlchemy integration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,17 @@ services:
       - "8001:8000"
     environment:
       - ENVIRONMENT=dev
+      - DATABASE_URL=postgresql+psycopg://postgres:postgres@users-db:5432/users_dev
+      - DATABASE_TEST_URL=postgresql+psycopg://postgres:postgres@users-db:5432/users_test
+    depends_on:
+      - users-db
+
+  users-db:
+    build:
+      context: ./services/users/project/db
+      dockerfile: Dockerfile
+    ports:
+      - "5432:5432"
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
