--- a/services/users/requirements.in
+++ b/services/users/requirements.in
@@ -3,5 +3,6 @@ pydantic-settings==2.12.0
 uvicorn==0.40.0
 sqlalchemy==2.0.36
 psycopg[binary]==3.2.3
-
-
+pytest==8.3.4
+httpx==0.28.1
+pytest-cov==6.0.0
