--- a/services/users/requirements.txt
+++ b/services/users/requirements.txt
@@ -19,6 +19,8 @@ click==8.3.1
     #   rich-toolkit
     #   typer
     #   uvicorn
+coverage==7.13.1
+    # via pytest-cov
 dnspython==2.8.0
     # via email-validator
 email-validator==2.3.0
@@ -43,6 +45,7 @@ httptools==0.7.1
     # via uvicorn
 httpx==0.28.1
     # via
+    #   -r services/users/requirements.in
     #   fastapi
     #   fastapi-cloud-cli
 idna==3.11
@@ -50,6 +53,8 @@ idna==3.11
     #   anyio
     #   email-validator
     #   httpx
+iniconfig==2.3.0
+    # via pytest
 jinja2==3.1.6
     # via fastapi
 markdown-it-py==4.0.0
@@ -58,6 +63,10 @@ markupsafe==3.0.3
     # via jinja2
 mdurl==0.1.2
     # via markdown-it-py
+packaging==25.0
+    # via pytest
+pluggy==1.6.0
+    # via pytest
 psycopg==3.2.3
     # via -r services/users/requirements.in
 psycopg-binary==3.2.3
@@ -78,6 +87,12 @@ pydantic-settings==2.12.0
     #   fastapi
 pygments==2.19.2
     # via rich
+pytest==8.3.4
+    # via
+    #   -r services/users/requirements.in
+    #   pytest-cov
+pytest-cov==6.0.0
+    # via -r services/users/requirements.in
 python-dotenv==1.2.1
     # via
     #   pydantic-settings
