--- a/services/users/requirements.txt
+++ b/services/users/requirements.txt
@@ -23,8 +23,9 @@ coverage==7.13.1
     # via pytest-cov
 dnspython==2.8.0
     # via email-validator
-email-validator==2.3.0
+email-validator==2.2.0
     # via
+    #   -r services/users/requirements.in
     #   fastapi
     #   pydantic
 fastapi==0.128.0
