feat: add code coverage and quality tooling

--- a/services/users/requirements.txt
+++ b/services/users/requirements.txt
@@ -116,6 +116,8 @@ rich-toolkit==0.17.1
     #   fastapi-cloud-cli
 rignore==0.7.6
     # via fastapi-cloud-cli
+ruff==0.8.6
+    # via -r services/users/requirements.in
 sentry-sdk==2.48.0
     # via fastapi-cloud-cli
 shellingham==1.5.4
